--- a/API/CramAuthApi/appsettings.json
+++ b/API/CramAuthApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+  "Issuer": "CramAuthApi",
+  "Audience": "CramClient",
+  "ExpiresInMinutes": 5
+  }
+
 }
