--- a/ANDROID/cram/gradle/libs.versions.toml
+++ b/ANDROID/cram/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.9.2"
+biometric = "1.2.0-alpha05"
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -15,9 +16,10 @@ koin = "3.5.3"
 retrofit = "2.9.0"
 okhttp = "4.12.0"
 okhttpLoggingInterceptor = "4.11.0"
-datastore="1.1.5"
+
 
 [libraries]
+androidx-biometric = { module = "androidx.biometric:biometric", version.ref = "biometric" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose" }
@@ -43,7 +45,6 @@ retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofi
 retrofit2-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 okhttp3-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp3-okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttpLoggingInterceptor" }
-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref="datastore" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
